--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,6 +1,5 @@
 .content {
   h2 {
-    width: 60%;
     margin: 0 auto;
     border-bottom: 1px solid $t-grey;
     padding-bottom: 15px;
