--- a/scss/layout/_blog-post.scss
+++ b/scss/layout/_blog-post.scss
@@ -39,6 +39,7 @@
         @media screen and #{$sm-break} {
           font-size: 1em;
           border: none;
+          margin: 0;
         }
       }
       p {
